--- a/foodprovider/package.json
+++ b/foodprovider/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^4.0.1",
+    "@react-firebase/database": "^0.3.10",
     "firebase": "^6.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
